# thunderstore-scraper

./: .gitignore  README.md  pyproject.toml
thunderstore_scraper/: scrape.py
